# user-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci-build.yaml  publish.yaml
.sqlx/: query-2cdceb56eb4961460c2dc985695f6dc2b7218a8ee653ba0315be68ff877badc1.json  query-37eb0e2c4c75eb1c00521b745ae4564ef7a7e9c1ea1612546b00a87261740a4f.json  query-3c64ba61bdced945a0fddef84679ed6e4f83f40644951e01affb324a6ec13fe9.json  query-40053c6ea528c1e336d03e8c6e7d9e48cf7a854fb2907ff9bc4554c4c9e1b2b7.json  query-528a89d300ffc993a94b66e8a687af2a27ea0247fda6d64dd22d586ea215253d.json  query-818e20fdfee874fce597766db5bbdee92214964ba08d5a19263aeb8fcdf73427.json  query-925dd00daa4da36ef123c90ad626e30df4aa3371d3a8bd1b282bb6119b243731.json  query-9746f8e72691dde0dc72939ca8fdde956ea86a7541f00570fc64136f5d3d65d4.json  query-9fc7875b45a0bd204de4a7ac306f740a9eac5d6c07ee87f027a437e4dc591406.json  query-ae29c67194208cbe1c83a887e07fddcea43082e47f4cd604508b83883f8e8c3c.json  query-b04d2528ddd79c41b6ba1f481dc19f658c5704eaef1e64f10fe4f087c9c52235.json  query-b4fd8673ed8378c7bc048a37d50ccef30b0eebdabc342549e534733ea94d3652.json  query-c4eea84d994a25bc027c3444e354b96881f465e15b02ad36c8433e5b82321b52.json  query-e376045a77378b621235a5cfa7e342830941cc3ea5ee723783cce4005d8d83d0.json  query-f0d8d3cd3b0618d69ca7902559b593261310c1b63e34512b637e89565a11e45b.json
migrations/: 1_initial_schema_creation.sql  2_fix_constraints_and_indexes.sql
proto/: reqresp.proto  service.proto
src/: env.rs  main.rs  observability.rs
src/dto/: comresp.rs  error.rs  mod.rs  requests.rs  service.rs  user.rs
src/grpc/: error.rs  generated.rs  mod.rs  server.rs  test.rs
src/repo/: error.rs  mod.rs  services.rs  users.rs
src/repo/test/: mod.rs  services.rs  users.rs
src/repo/test/export/: mocks.rs  mod.rs  otel.rs
src/rest/: error.rs  mod.rs  service.rs  test.rs
src/rest/dto/: mod.rs  user.rs
