[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
axum = "0.8.0"
axum-prometheus = "0.7.0"
axum-route-error = "5.1.0"
tonic = "0.12.0"
prost = "0.13.0"
prost-types = "0.13.0"
prost-wkt-types = "0.6.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_derive = "1.0.217"
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = [ "serde" ] }
url = "2.5.4"
anyhow = "1.0.101"
log = "0.4.22"
once_cell = "1.20.2"
prometheus = "0.13.4"
derive_more = { version = "1.0.0", features = ["display", "constructor", "from", "error", "from_str"] }
thiserror = "1.0.69"
async-trait = "0.1.83"
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
num-traits = "0.2.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.27.0"
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26.0", features = ["grpc-tonic"] }
axum-tracing-opentelemetry = "0.21.1"
tonic-tracing-opentelemetry = "0.21.0"

[dev-dependencies]
testcontainers = "0.15.0"
http = "1.2.0"
http-body-util = "0.1.2"
mime = "0.3.17"
tower = "0.5.2"
tokio-stream = { version = "0.1.17", features = ["net"] }

[build-dependencies]
tonic-build = "0.12.0"
