[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
axum = "0.8.1"
axum-prometheus = "0.10.0"
axum-route-error = "5.1.0"
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
prost-wkt-types = "0.7.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_derive = "1.0.217"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
dotenvy = "0.15.7"
chrono = { version = "0.4.39", features = [ "serde" ] }
url = "2.5.4"
anyhow = "1.0.101"
log = "0.4.22"
prometheus = "0.14.0"
derive_more = { version = "2.1.1", features = ["display", "constructor", "from", "error", "from_str"] }
thiserror = "2.0.18"
autometrics = { version = "3.0.0", features = ["prometheus-exporter"] }
num-traits = "0.2.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
axum-tracing-opentelemetry = "0.33.0"

[dev-dependencies]
testcontainers = "0.27.0"
http = "1.2.0"
http-body-util = "0.1.2"
mime = "0.3.17"
tower = "0.5.2"
tokio-stream = { version = "0.1.17", features = ["net"] }

[build-dependencies]
tonic-prost-build = "0.14.3"
