[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-prometheus = "0.10.0"
axum-route-error = "5.1.0"
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
prost-wkt-types = "0.7.1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_derive = "1.0.228"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = [ "serde" ] }
url = "2.5.8"
anyhow = "1.0.102"
prometheus = "0.14.0"
derive_more = { version = "2.1.1", features = ["display", "constructor", "from", "error", "from_str"] }
thiserror = "2.0.18"
autometrics = { version = "3.0.0", features = ["prometheus-exporter"] }
num-traits = "0.2.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
axum-tracing-opentelemetry = "0.33.0"

[dev-dependencies]
testcontainers = "0.27.1"
http = "1.4.0"
http-body-util = "0.1.3"
mime = "0.3.17"
tower = "0.5.3"
tokio-stream = { version = "0.1.18", features = ["net"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
